# prism

./: .dockerignore  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/gateway/src/prism_gateway/: __init__.py  auth.py  main.py  mydatum_security.py  routes.py  storage.py
apps/web/: package-lock.json  package.json  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  api.ts  styles.css
datasets/customer_support/: cases.jsonl
datasets/pulse_sample/: cases.jsonl
datasets/synthetic_pii/: cases.jsonl
docker/: docker-compose.enterprise.yml  docker-compose.yml  gateway.Dockerfile  gateway.enterprise.Dockerfile  web.Dockerfile
docs/: cross-repo-execution-commands.md  execution-commands.md  implementation-task-packs.md  main-implementation-plan.md  phase-status.md  policy-conflict-resolution.md  product-execution-commands.md  product-implementation-task-packs.md
examples/policies/: pulse.yaml  support.yaml
examples/policies/commercial/: civic_reports.yaml  customer_support.yaml  finance.yaml  healthcare.yaml  hr.yaml
examples/requests/: transform.json
tests/: test_chat_completions_compat.py  test_chat_mock.py  test_cli_eval.py  test_commercial_policy_packs.py  test_community_without_enterprise.py  test_detectors.py  test_eval_dataset_loader.py  test_eval_leakage_scanner.py  test_eval_rehydration_validator.py  test_eval_reports.py  test_gateway_auth.py  test_gateway_mydatum_auth.py  test_gateway_policy.py  test_gateway_storage.py  test_health.py  test_no_enterprise_imports.py  test_phase0_imports.py  test_plugin_interfaces.py  test_plugin_loading.py  test_policy_packages.py  test_policy_runtime.py  test_policy_transform_integration.py  test_provider_mock.py  test_provider_openai.py  test_proxy_flow.py  test_redis_vault.py  test_rehydration.py  test_responses_compat.py  test_transaction_events.py  test_transaction_sinks.py  test_transform_mvp.py  test_transformers.py  test_vault_core.py  test_vault_ttl.py
tests/integration/: test_redis_vault_integration.py
